...
    val screenWidth = configuration.screenWidthDp.dp
    val screenHeight = configuration.screenHeightDp.dp
    FloatingActionButton(
        onClick = { navigation.navigate("EditProfileScreen") },
        modifier = Modifier
            .padding(top = 48.dp, end = 16.dp)
            .testTag("editProfileButton"), // Adding a test tag
        containerColor = Color(0xff99b1ed),
    ) {
        Icon(
            painter = painterResource(R.drawable.edit_24px),
            contentDescription = "Edit Profile"
        )
...
}

@Composable
fun UserMilestones() {
    LazyColumn {
        item {
            Text("User Milestones", fontWeight = FontWeight.Bold, fontSize = 20.sp)
        }
        items(achievements) { achievement ->
            Row(
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(8.dp),
...
    }
}

data class Achievement(val name: String, val stats: String)

val achievements = listOf(
    Achievement("Post 10 messages", "10 points"),
    Achievement("Post 100 messages", "20 points"),
    Achievement("Post 1000 messages", "30 points")
)

@Composable
fun Posts(
    posts: Map<String, MessageListFormat>?,
    snackbarHostState: SnackbarHostState,
...
